--- a/demo.ui
+++ b/demo.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>624</width>
-    <height>449</height>
+    <width>776</width>
+    <height>580</height>
    </rect>
   </property>
   <property name="font">
@@ -19,12 +19,12 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Summer School UI Demo</string>
+   <string>NIHSS upper limb test</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <layout class="QGridLayout" name="gridLayout_2">
+     <layout class="QGridLayout" name="gridLayout_main">
       <item row="2" column="0">
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
@@ -40,28 +40,34 @@
       </item>
       <item row="1" column="1" rowspan="2">
        <layout class="QGridLayout" name="gridLayout">
-        <item row="2" column="0" colspan="3">
-         <widget class="QPushButton" name="pushButton">
+        <property name="spacing">
+         <number>20</number>
+        </property>
+        <item row="0" column="0" colspan="3">
+         <widget class="QLabel" name="label_2">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
           <property name="text">
-           <string>Load a Picture</string>
+           <string>NIHSS score</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+        <item row="2" column="0">
+         <widget class="QPushButton" name="pushButton">
+          <property name="text">
+           <string>Load video</string>
           </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Minimum</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
+         </widget>
         </item>
         <item row="1" column="1">
          <widget class="QLabel" name="ScoreLabel">
@@ -78,37 +84,14 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="2">
-         <spacer name="horizontalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Minimum</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QLabel" name="label_2">
+        <item row="2" column="2">
+         <widget class="QPushButton" name="pushButton_2">
           <property name="text">
-           <string>Score of the Picture</string>
+           <string>open camera</string>
           </property>
          </widget>
         </item>
        </layout>
-      </item>
-      <item row="0" column="0" rowspan="2">
-       <widget class="QLabel" name="PicLabel">
-        <property name="text">
-         <string>Your picture will be shown here!</string>
-        </property>
-       </widget>
       </item>
       <item row="0" column="1">
        <spacer name="verticalSpacer">
@@ -123,6 +106,13 @@
         </property>
        </spacer>
       </item>
+      <item row="0" column="0" rowspan="2">
+       <widget class="QLabel" name="PicLabel">
+        <property name="text">
+         <string>Your picture will be shown here!</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
@@ -132,8 +122,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>624</width>
-     <height>21</height>
+     <width>776</width>
+     <height>27</height>
     </rect>
    </property>
   </widget>
